--- a/resources/templates/report/scadenzario/acquisti_header.html.erb
+++ b/resources/templates/report/scadenzario/acquisti_header.html.erb
@@ -47,9 +47,9 @@
                 <th style="width: 10%;" class="center">Data</th>
                 <th style="width: 12%;" class="right">Importo</th>
                 <th style="width: 13%;" class="left">Aliquota</th>
-                <th style="width: 10%;" class="right">Imponibile</th>
+                <th style="width: 10%;" class="right">Imp.</th>
                 <th style="width: 10%;" class="right">Iva</th>
-                <th style="width: 10%;" class="right">Iva detraibile</th>
+                <th style="width: 10%;" class="right">Iva ind.</th>
                 <th style="width: 13%;" class="left">Norma</th>
               </tr>
             </thead>
