--- a/resources/templates/report/scritture/bilancio_conto_economico_header.html.erb
+++ b/resources/templates/report/scritture/bilancio_conto_economico_header.html.erb
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="span8 offset2">
           <p class="center">
-            <strong>Bilancio di verifica</strong><br /><br />
+            <strong>BILANCIO DI VERIFICA</strong><br /><br />
           </p>
         </div>
       </div>
@@ -42,11 +42,11 @@
           <table id="head" class="table table-head table-bordered table-condensed">
             <thead>
               <tr>
-                <th style="width: 100%;" class="left">PROFITTI E PERDITE</th>
+                <th style="width: 100%;" colspan="6" class="center">PROFITTI E PERDITE</th>
               </tr>
               <tr>
-                <th style="width: 50%;" class="left">COSTI E SPESE</th>
-                <th style="width: 50%;" class="left">RICAVI</th>
+                <th style="width: 50%;" colspan="3" class="center">COSTI E SPESE</th>
+                <th style="width: 50%;" colspan="3" class="center">RICAVI</th>
               </tr>
               <tr>
                 <th style="width: 10%;" class="left">Conto</th>
