--- a/resources/templates/fattura/fattura.xml.erb
+++ b/resources/templates/fattura/fattura.xml.erb
@@ -62,7 +62,7 @@ xsi:schemaLocation="http://ivaservizi.agenziaentrate.gov.it/docs/xsd/fatture/v1.
       <DatiGeneraliDocumento>
         <TipoDocumento><%= fattura.nota_di_credito? ? 'Nota di credito' : 'Fattura' %></TipoDocumento>
         <Divisa>EUR</Divisa>
-        <Data><%= fattura.data_emissione YYYY-MM-DD%></Data>
+        <Data><%= fattura.data_emissione %></Data>
         <Numero><%= fattura.num %></Numero>
         <% if ritenuta = fattura.ritenuta %>
           <DatiRitenuta>
@@ -72,7 +72,7 @@ xsi:schemaLocation="http://ivaservizi.agenziaentrate.gov.it/docs/xsd/fatture/v1.
             <CausalePagamento>???</CausalePagamento>
           </DatiRitenuta>
         <% end %>
-        <ImportoTotaleDocumento><%= fattura.importo %></ImportoTotaleDocumento>
+        <ImportoTotaleDocumento><%= Helpers::ApplicationHelper.number_text(fattura.importo) %></ImportoTotaleDocumento>
         <Causale>???</Causale>
         <Causale>SEGUE DESCRIZIONE CAUSALE NEL CASO IN CUI NON SIANO STATI SUFFICIENTI 200 CARATTERI AAAAAAAAAAA BBBBBBBBBBBBBBBBB</Causale>
       </DatiGeneraliDocumento>
@@ -106,38 +106,38 @@ xsi:schemaLocation="http://ivaservizi.agenziaentrate.gov.it/docs/xsd/fatture/v1.
       <% if configatron.attivita == Models::Azienda::ATTIVITA[:commercio] %>
         <% fattura.righe_fattura_cliente.each_with_index do |riga, idx| %>
           <DettaglioLinee>
-            <NumeroLinea><%= idx %></NumeroLinea>
+            <NumeroLinea><%= idx + 1 %></NumeroLinea>
             <Descrizione><%= riga.descrizione %></Descrizione>
             <Quantita><%= (riga.qta.zero?) ? '' : riga.qta.to_s %></Quantita>
-            <PrezzoUnitario><%= (riga.importo.zero?) ? '' : Helpers::ApplicationHelper.currency(riga.importo) %></PrezzoUnitario>
-              <%=
+            <PrezzoUnitario><%= (riga.importo.zero?) ? '' : Helpers::ApplicationHelper.number_text(riga.importo) %></PrezzoUnitario>
+              <%
                 importo_t = nil
                 if riga.qta.zero?
                   importo_t = riga.importo unless riga.importo.zero?
                 else
                   importo_t = (riga.qta * riga.importo)
                 end
-                <PrezzoTotale><%= (importo_t.nil?) ? '' :  Helpers::ApplicationHelper.currency(importo_t) %></PrezzoTotale>
               %>
-            <AliquotaIVA><%= riga.aliquota.percentuale %>float 20.00</AliquotaIVA>
+              <PrezzoTotale><%= (importo_t.nil?) ? '' :  Helpers::ApplicationHelper.number_text(importo_t) %></PrezzoTotale>
+            <AliquotaIVA><%= Helpers::ApplicationHelper.number_text(riga.aliquota.percentuale) %></AliquotaIVA>
           </DettaglioLinee>
         <% end %>
       <% else %>
-        <% fattura.righe_fattura_cliente.each do |riga| %>
+        <% fattura.righe_fattura_cliente.each_with_index do |riga, idx| %>
           <DettaglioLinee>
-            <NumeroLinea><%= idx %></NumeroLinea>
+            <NumeroLinea><%= idx + 1 %></NumeroLinea>
             <Descrizione><%= riga.descrizione %></Descrizione>
             <Quantita/>
             <PrezzoUnitario/>
-            <PrezzoTotale><%= Helpers::ApplicationHelper.currency(riga.importo) %></PrezzoTotale>
-            <AliquotaIVA><%= riga.aliquota.percentuale %>float 20.00</AliquotaIVA>
+            <PrezzoTotale><%= Helpers::ApplicationHelper.number_text(riga.importo) %></PrezzoTotale>
+            <AliquotaIVA><%= Helpers::ApplicationHelper.number_text(riga.aliquota.percentuale) %></AliquotaIVA>
           </DettaglioLinee>
         <% end %>
       <% end %>
       <% riepilogo_imposte.each do |imposta| %>
         <DatiRiepilogo>
-          <AliquotaIVA><%= imposta.imponibile %> float 22.00</AliquotaIVA>
-          <ImponibileImporto><%= imposta.imponibile %> float 5.00</ImponibileImporto>
+          <AliquotaIVA><%= Helpers::ApplicationHelper.number_text(imposta.percentuale) %></AliquotaIVA>
+          <ImponibileImporto><%= imposta.imponibile %></ImponibileImporto>
           <Imposta><%= imposta.totale %></Imposta>
           <EsigibilitaIVA>???</EsigibilitaIVA>
         </DatiRiepilogo>
