--- a/resources/templates/fattura/fattura.xml.erb
+++ b/resources/templates/fattura/fattura.xml.erb
@@ -62,7 +62,7 @@ xsi:schemaLocation="http://ivaservizi.agenziaentrate.gov.it/docs/xsd/fatture/v1.
   <FatturaElettronicaBody>
     <DatiGenerali>
       <DatiGeneraliDocumento>
-        <TipoDocumento><%= fattura.nota_di_credito? ? 'Nota di credito' : 'Fattura' %></TipoDocumento>
+        <TipoDocumento><%= fattura.tipo_documento %></TipoDocumento>
         <Divisa>EUR</Divisa>
         <Data><%= fattura.data_emissione %></Data>
         <Numero><%= fattura.num %></Numero>
@@ -70,7 +70,7 @@ xsi:schemaLocation="http://ivaservizi.agenziaentrate.gov.it/docs/xsd/fatture/v1.
           <DatiRitenuta>
             <TipoRitenuta><%= fattura.tipo_ritenuta %></TipoRitenuta>
             <ImportoRitenuta><%= Helpers::ApplicationHelper.number_text(totale_ritenuta) %></ImportoRitenuta>
-            <AliquotaRitenuta><%= Helpers::ApplicationHelper.percentage(fattura.ritenuta.percentuale, 0) %></AliquotaRitenuta>
+            <AliquotaRitenuta><%= Helpers::ApplicationHelper.number_text(fattura.ritenuta.percentuale) %></AliquotaRitenuta>
             <CausalePagamento><%= fattura.causale_pagamento %></CausalePagamento>
           </DatiRitenuta>
         <% end %>
@@ -83,8 +83,8 @@ xsi:schemaLocation="http://ivaservizi.agenziaentrate.gov.it/docs/xsd/fatture/v1.
           <DettaglioLinee>
             <NumeroLinea><%= idx + 1 %></NumeroLinea>
             <Descrizione><%= riga.descrizione %></Descrizione>
-            <Quantita><%= (riga.qta.zero?) ? '' : riga.qta.to_s %></Quantita>
-            <PrezzoUnitario><%= (riga.importo.zero?) ? '' : Helpers::ApplicationHelper.number_text(riga.importo) %></PrezzoUnitario>
+            <Quantita><%= Helpers::ApplicationHelper.number_text(riga.qta) %></Quantita>
+            <PrezzoUnitario><%= Helpers::ApplicationHelper.number_text(riga.importo) %></PrezzoUnitario>
               <%
                 importo_t = nil
                 if riga.qta.zero?
@@ -93,8 +93,11 @@ xsi:schemaLocation="http://ivaservizi.agenziaentrate.gov.it/docs/xsd/fatture/v1.
                   importo_t = (riga.qta * riga.importo)
                 end
               %>
-              <PrezzoTotale><%= (importo_t.nil?) ? '' :  Helpers::ApplicationHelper.number_text(importo_t) %></PrezzoTotale>
+              <PrezzoTotale><%= Helpers::ApplicationHelper.number_text(importo_t) %></PrezzoTotale>
             <AliquotaIVA><%= Helpers::ApplicationHelper.number_text(riga.aliquota.percentuale) %></AliquotaIVA>
+            <% if riga.aliquota.percentuale.zero? %>
+              <Natura><%= riga.aliquota.tipo_esenzione %></Natura>
+            <% end %>
           </DettaglioLinee>
         <% end %>
       <% else %>
