--- a/resources/templates/fattura/fattura.xml.erb
+++ b/resources/templates/fattura/fattura.xml.erb
@@ -104,8 +104,8 @@ xsi:schemaLocation="http://ivaservizi.agenziaentrate.gov.it/docs/xsd/fatture/v1.
           <DettaglioLinee>
             <NumeroLinea><%= idx + 1 %></NumeroLinea>
             <Descrizione><%= riga.descrizione %></Descrizione>
-            <Quantita>1<Quantita/>
-            <PrezzoUnitario><%= Helpers::ApplicationHelper.number_text(riga.importo) %><PrezzoUnitario/>
+            <Quantita><%= Helpers::ApplicationHelper.number_text(1) %></Quantita>
+            <PrezzoUnitario><%= Helpers::ApplicationHelper.number_text(riga.importo) %></PrezzoUnitario>
             <PrezzoTotale><%= Helpers::ApplicationHelper.number_text(riga.importo) %></PrezzoTotale>
             <AliquotaIVA><%= Helpers::ApplicationHelper.number_text(riga.aliquota.percentuale) %></AliquotaIVA>
             <% if riga.aliquota.percentuale.zero? %>
